cmake_minimum_required (VERSION 2.8)

##################################################
# Include
##################################################
include_directories(${CMAKE_SOURCE_DIR})

##################################################
# Library
##################################################
#find_package (Threads)

##################################################
# Executable
##################################################
add_executable(mutex mutex.c)

##################################################
# Link
##################################################
target_link_libraries(mutex pthread)

